--- a/roles/secrets/templates/secrets.yml.j2
+++ b/roles/secrets/templates/secrets.yml.j2
@@ -34,9 +34,7 @@ kind: Secret
 metadata:
   name: {{ kubernetes_secret.name }}
   namespace: {{ namespace }}
-data:
-  runner-registration-token: ""
-  runner-token: Z2xydC05b2s4RUhFbUZWa25zYzZ5UWU5cw==
+data: {{ kubernetes_secret.data }}
 type: Opaque
 {% endfor %}
 {% elif kubernetes_secret.type == 'tls' %}
