cleanup, remove null lines from template

--- a/roles/secrets/templates/secrets.yml.j2
+++ b/roles/secrets/templates/secrets.yml.j2
@@ -49,11 +49,11 @@ data:
   tls.crt: |
 {% filter indent(width=4) %}
     {{ kubernetes_secret.cert }}
-{% endfilter %}
+{%- endfilter %}
   tls.key: |
 {% filter indent(width=4) %}
     {{ kubernetes_secret.key }}
-{% endfilter %}
+{%- endfilter %}
 type: kubernetes.io/tls
 {% endfor %}
 {% endif %}
