--- a/roles/containerd/templates/config.toml.j2
+++ b/roles/containerd/templates/config.toml.j2
@@ -139,6 +139,7 @@ version = 2
             SystemdCgroup = true
 
 {% if kubernetes_containerd_sandbox_gvisor_enabled %}
+{# gVisor systrap Platform (default) #}
         [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runsc]
           base_runtime_spec = ""
           cni_conf_dir = ""
@@ -150,6 +151,29 @@ version = 2
           runtime_path = ""
           runtime_root = ""
           runtime_type = "io.containerd.runsc.v1"
+
+          [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runsc.options]
+            TypeUrl = "io.containerd.runsc.v1.options"
+            ConfigPath = "/etc/containerd/runsc.toml"
+
+{% endif %}
+{% if kubernetes_containerd_sandbox_gvisor_kvm_enabled %}
+{# gVisor KVM Platform #}
+        [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runsc-kvm]
+          base_runtime_spec = ""
+          cni_conf_dir = ""
+          cni_max_conf_num = 0
+          container_annotations = []
+          pod_annotations = []
+          privileged_without_host_devices = false
+          runtime_engine = ""
+          runtime_path = ""
+          runtime_root = ""
+          runtime_type = "io.containerd.runsc.v1"
+
+          [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runsc-kvm.options]
+            TypeUrl = "io.containerd.runsc.v1.options"
+            ConfigPath = "/etc/containerd/runsc-kvm.toml"
 {% endif %}
 
       [plugins."io.containerd.grpc.v1.cri".containerd.untrusted_workload_runtime]
